\blankpage Problem gelöst
\blankpage Problem gelöst

--- a/Diplomarbeit_TeX/Textparts/diplomanden.tex
+++ b/Diplomarbeit_TeX/Textparts/diplomanden.tex
@@ -11,7 +11,7 @@
 		  \schule{2012--2017}{NMS St. Pölten}}
 		  {privat@mail.at}
 		  {Images/portraits/bild}
-\cleardoublepage
+\blankpage
 %% Schueler2
 \diplomand{Martina Musterfrau}
 			{01.01.2002 in St.Pölten}
